<resources>
    <string name="app_name">Shoes Shop</string>


    <!--Khanh-->
    <string name="unit">đ</string>
    <string name="promotion_information">Thông tin khuyến mãi</string>
    <string name="name_promotions">Tên chương trình</string>
    <string name="hint_name_promotions">Nhập tên chương trình</string>
    <string name="start_time">Thời gian bắt đầu</string>
    <string name="end_time">Thời gian kết thúc</string>
    <string name="content_promotions">Nội dung</string>
    <string name="hint_content_promotions">Nhập nội dung chương trình</string>
    <string name="btnSave">Lưu</string>
    <string name="edit_product_info">Sửa thông tin sản phẩm</string>
    <string name="btnFinish">Hoàn thành</string>
    <string name="code_product">Sản phẩm:</string>
    <string name="discount">Giảm giá:</string>
    <string name="gift">Quà tặng:</string>
    <string name="start">Bắt đầu:</string>
    <string name="end">Kết thức:</string>
    <string name="promotions_program">Chương trình khuyến mãi</string>
    <string name="Listedprice">Giá niêm yết:</string>
    <string name="SalePrice">Giá bán:</string>
    <string name="point">Điểm tích lũy:</string>


    <!--Toan-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <!--SON-->
    <string name="title_home">Trang chủ</string>
    <string name="title_cart">Giỏ hàng</string>
    <string name="title_account">Tài khoản</string>
    <string name="title_notifications">Thông báo</string>
    <string name="title_history">Lịch sử</string>

    <string name="order_information">Thông tin khuyến mãi</string>
    <string name="client_information">Thông tin khách hàng</string>
    <string name="notifi_information">Thông báo</string>
    <string name="hint_hoten">Họ tên</string>
    <string name="hint_sdt">Số điện thoại</string>
    <string name="hint_diachi">Địa chỉ</string>
    <string name="dathang">Đặt hàng</string>


    <!--Sang-->

    <string name="edtTen">Tên đăng nhập</string>
    <string name="edtPassHT">Mật khẩu hiện tại</string>
    <string name="edtPassM">Mật khẩu mới</string>
    <string name="edtReturnPass">Nhập lại mật khẩu mới</string>
    <!--list view-->
    <string name="imgView">imageView</string>
    <string name="txtLichSu">lich su</string>
    <string name="btnImg">imageButtun</string>
    <!--layout 22-->
    <string name="txtTenShop">MiniShop</string>
    <string name="txtThongBao">Thông báo</string>
    <!--lay out12-->
    <string name="txtHistoryInfo">mã hàng</string>
    <string name="btnChiTiet">Chi tiết</string>


    <!--Toan update-->
    <string name="filter_name">Choose a name</string>
    <string-array name="filter_name_arrays">
        <item>(Tất cả loại giày)</item>
        <item>Nike</item>
        <item>Adidas</item>
        <item>Bitits</item>
        <item>Puma</item>
        <item>Jordan</item>
    </string-array>

    <string name="Filter_Price">Choose price</string>
    <string-array name="price_arrays">
        <item>(Tất cả giá)</item>
        <item>Dưới 1 tr</item>
        <item>Trên 1 tr</item>
    </string-array>
    <string name="Filter_Size">Choose price</string>
    <string-array name="size_arrays">
        <item>38</item>
        <item>39</item>
        <item>40</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hs">HSActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
