<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linerlayout3"
    android:orientation="horizontal"
    android:layout_margin="@dimen/margin_item"
    android:id="@+id/llPromotionsDetail"
    >
            <LinearLayout
                style="@style/linerlayout4"
                android:layout_weight="2"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imgImage"
                    android:layout_width="@dimen/size_image"
                    android:layout_height="@dimen/size_image"
                    android:layout_margin="@dimen/margin_item"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/giay"/>
            </LinearLayout>

            <LinearLayout
                style="@style/linerlayout4"
                android:layout_weight="3"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/row">
                    <!--<LinearLayout-->
                        <!--style="@style/child">-->
                        <!--<TextView-->
                            <!--style="@style/wrapcontent"-->
                            <!--android:text="@string/code_product"/>-->
                    <!--</LinearLayout>-->

                    <LinearLayout
                        style="@style/child"
                        android:gravity="center_vertical">
                        <TextView
                            android:id="@+id/tvCode"
                            style="@style/wrapcontent"
                            android:textColor="#006400"
                            android:textSize="18sp"
                            android:text="SP0001"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDiscount"
                   style="@style/row">
                    <LinearLayout
                        style="@style/child"
                        android:gravity="center_vertical"
                        >

                        <TextView
                            android:id="@+id/tvTitleDiscount"
                            style="@style/wrapcontent"
                            android:text="@string/discount"/>

                    </LinearLayout>

                    <LinearLayout
                        style="@style/child"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:id="@+id/tvDiscount"
                            style="@style/wrapcontent"
                            android:textColor="@color/money"
                            android:text="10"/>

                        <TextView
                            style="@style/wrapcontent"
                            android:layout_marginLeft="@dimen/margin_parent"
                            android:textColor="@color/unitColor"
                            android:text="%"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGift"
                    style="@style/row">
                    <LinearLayout
                        style="@style/child"
                        android:layout_gravity="top">
                        <TextView
                            style="@style/wrapcontent"
                            android:text="@string/gift"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/child">
                        <TextView
                            android:id="@+id/tvGift"
                           style="@style/wrapcontent"
                            android:text="vớ cao cấp"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPoint"
                    style="@style/row">
                    <LinearLayout
                        style="@style/child"
                        android:layout_gravity="top">
                        <TextView
                            style="@style/wrapcontent"
                            android:text="@string/point"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/child">
                        <TextView
                            android:id="@+id/tvPoint"
                            style="@style/wrapcontent"
                            android:textColor="@color/bg_main"
                            android:text="10"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
</LinearLayout>